[package]
name = "gpu-zhenhaowan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-channel = "2.3.1"
compio = { version = "0.14.0", features = ["process", "runtime", "io-uring", "macros"] }
crossterm = { version = "0.29.0", default-features = false }
cubecl = { git = "https://github.com/tracel-ai/cubecl", version = "0.5.0", features = ["wgpu"] }
fontdue = { version = "0.9.3", default-features = false }
scope_timer = "0.2.3"
